# reddit-clone-backend

./: DEVELOPMENT_JOURNAL.md  DEVELOPMENT_PLAN.md  GEMINI.md  LICENSE  Makefile  app.py  piccolo_conf.py  pyproject.toml
app/: main.py  piccolo_app.py
app/controllers/: post.py  subreddit.py  user.py
app/dtos/: auth.py  post.py  subreddit.py  user.py
app/middleware/: auth.py
app/migrations/: app_2026_01_25t20_07_46_659228.py  app_2026_01_25t21_36_15_972870.py
app/models/: post.py  subreddit.py  user.py
app/services/: auth_service.py  post_service.py  subreddit_service.py  user_service.py
tests/: conftest.py
tests/posts/: test_create_post.py  test_get_post.py  test_list_posts.py
tests/posts/__snapshots__/: test_create_post.ambr  test_get_post.ambr  test_list_posts.ambr
tests/subreddits/: test_create_subreddit.py  test_get_subreddit.py  test_list_subreddits.py
tests/subreddits/__snapshots__/: test_create_subreddit.ambr  test_get_subreddit.ambr  test_list_subreddits.ambr
tests/users/: test_get_me.py  test_get_user.py  test_login.py  test_register.py
tests/users/__snapshots__/: test_get_me.ambr  test_get_user.ambr  test_login.ambr  test_register.ambr
