[project]
name = "reddit-clone-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "firebase-admin>=7.1.0",
    "granian>=2.6.1",
    "litestar>=2.19.0",
    "litestar-piccolo>=0.1.0",
    "litestar-vite>=0.17.0",
    "msgspec>=0.20.0",
    "piccolo[postgres]>=1.30.0",
    "pyjwt>=2.10.1",
    "ruff>=0.14.14",
    "syrupy>=5.1.0",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "polyfactory>=3.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
    "syrupy>=5.1.0",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
